--- a/FinalProject/app/src/main/res/layout/fragment_main.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_main.xml
@@ -22,6 +22,13 @@
         android:layout_below="@+id/instructions_text_view"
         android:text="@string/button_text" />
 
+    <ProgressBar
+        android:id="@+id/pb_loading_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
